--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
       </nav>
     </div>
     <div class="btns">
-      <a href="#Bakery Mall">Contact</a>
-      <a href="#contact">Contact</a>
-      <a href="#contact">Contact</a>
-      <a href="#contact">Contact</a>
-      <a href="#contact">Contact</a>
-      <a href="#contact">Contact</a>
+      <a href="#Bakery Mall">Bakery Cornor</a>
+      <a href="#contact">Sweet Cornor</a>
+      <a href="#contact">cupcake Cornor</a>
+      <a href="#contact">Best Deals</a>
+      <a href="#contact">Special Discount</a>
+      <a href="#contact">Best Deals</a>
+      <a href="#contact">Special Discount1</a>
+      <a href="#contact">Amazing Deals</a>
+      <a href="#contact">Deals with Discounts</a>
     </div>
     <div id="categories" class="categories">
       <h1>categories</h1>
